force-app/main/default/src/objects/HealthCloudGA__LeadConvertedStatusMapping__mdt/HealthCloudGA__LeadConvertedStatusMapping__mdt.object-meta.xml
<CustomObject>
    <description>Defines the Converted status for a Lead Record Type in Health Cloud</description>
    <label>Lead Converted Status Mapping</label>
    <pluralLabel>Lead Converted Status Mappings</pluralLabel>
</CustomObject>