force-app/main/default/src/objects/HealthCloudGA__LeadConvertedStatusMapping__mdt/fields/HealthCloudGA__LeadConvertedStatus__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LeadConvertedStatus__c</fullName>
    <description>status on Lead object which is a valid status of type converted</description>
    <label>Lead Converted Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>