force-app/main/default/src/objects/HealthCloudGA__LeadConvertedStatusMapping__mdt/fields/HealthCloudGA__LeadRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LeadRecordTypeName__c</fullName>
    <description>Name of record type on Lead object which is valid for Health Cloud</description>
    <label>Lead Record Type Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>