force-app/main/default/src/objects/HealthCloudGA__LeadConvertedStatusMapping__mdt/fields/HealthCloudGA__LeadRecordTypeNamespace__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LeadRecordTypeNamespace__c</fullName>
    <description>Lead record type namespace.</description>
    <label>Record Type Namespace</label>
    <length>15</length>
    <type>Text</type>
</CustomField>